# meeting-transcriber

./: .codecov.yml  .gitignore  .swiftformat  .swiftlint.yml  CLAUDE.md  CONTRIBUTING.md  Meeting_transcriber.py  README.md  SECURITY.md  diarize.py  entitlements.plist  meeting_transcriber_mac.py  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  filters.yml  release.yml  tag-ruleset.json
Casks/: meeting-transcriber.rb  meeting-transcriber@beta.rb
docs/: architecture-macos.md  automation-api.md  dmg_distribution_plan.md  roadmap.md
scripts/: assert-red-pixels.swift  bless_quality_baseline.sh  build_audiotap.sh  build_perf_report.py  build_perf_report.sh  build_proctap.sh  build_release.sh  build_whisperkit.sh  configure-tag-ruleset.sh  dump_teams_ax.py  e2e-app.sh  e2e-browser.sh  e2e-channel-health.sh  e2e-cpu-load.sh  e2e-live-captions.sh  e2e-permission-health.sh  e2e-settings-smoke.sh  e2e-silent-recording.sh  export-lcov.sh  generate_menu_bar_gifs.swift  generate_quality_fixtures.sh  generate_social_preview.py  generate_test_audio.sh  generate_test_audio_3speakers.sh  generate_test_audio_en.sh  generate_test_audio_with_silence.sh  keychain-prepend.sh  lint.sh  notarize_status.sh  pre-push.sh  run_app.sh  setup-self-hosted-runner.sh  test_rpc.sh  wav_rms.py
site/: CNAME  impressum.html  index.html  privacy.html  style.css  terms.html
tests/: conftest.py  test_audio_mac.py  test_diarize.py  test_dual_source.py  test_e2e_app_audio.py  test_e2e_diarize.py  test_mute_detector.py  test_protocol.py  test_speaker_ipc.py  test_watcher.py  (+2 more)
(+489 files in other folders)
