[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-transcriber"
version = "1.0.0"
description = "Record meetings, transcribe with Whisper, generate protocols with Claude"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "numpy",
    "rich",
    "python-dotenv",
]

[project.optional-dependencies]
mac = [
    "pywhispercpp",
    "scipy",
    "sounddevice",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-ApplicationServices",
]
windows = [
    "faster-whisper",
    "pyaudiowpatch",
]
diarize = [
    "pyannote.audio",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
transcribe = "meeting_transcriber.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_transcriber"]

[tool.ruff]
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "macos_only: marks tests that require macOS",
]
